--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.12.7
 charset-normalizer==2.0.12
 colorama==0.4.6
 Django==2.2.16
+gunicorn==20.0.4
 Faker==17.0.0
 idna==3.4
 iniconfig==2.0.0
