--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
+    ports:
+     - "8000:8000"
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
@@ -24,7 +26,7 @@ services:
     image: nginx:1.21.3-alpine
 
     ports:
-      - "8084:80"
+      - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
 
