--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
+      - /etc/letsencrypt/live/newbie-union.fun/:/etc/letsencrypt/live/newbie-unuion.fun
     depends_on:
       - db
     env_file:
@@ -27,12 +28,15 @@ services:
 
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
 
       - static_value:/var/html/static/
 
       - media_value:/var/html/media/
+
+      - /etc/letsencrypt/:/etc/letsencrypt/
 
     depends_on:
       - web
