--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,12 @@
 server {
     listen 80;
-    server_name 194.32.248.13;
+    listen 443 ssl http2;
+
+    server_name 194.32.248.13 newbie-union.fun;
     server_tokens off;
+    ssl_certificate /etc/letsencrypt/live/newbie-union.fun/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/newbie-union.fun/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/newbie-union.fun/chain.pem;
 
     location /static/ {
         root /var/html/;
